# language-c-pedantic

./: ChangeLog.md  LICENSE  README.md  default.nix  language-c-pedantic.cabal
src/Language/C/: CodeGenMonad.hs  Pretty.hs
src/Language/C/Syntax/: AST.hs  Libs.hs
