name:                language-c-pedantic
version:             0.0.1.0
synopsis: A library for pedantic C generation with support for the C preprocessor

description:
            language-c-pedantic is a library for C code generation, with special
            focus on generation of portable code. There is also support for the
            C preprocessor.
            .
            This library is originally based on the language-c package.

license:             BSD3
license-file:        LICENSE
copyright:           LICENSE
author:              Zach Sullivan
maintainer:          zsulliva@uoregon.edu
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.C.Pretty,
                       Language.C.Syntax.AST,
                       Language.C.Syntax.Libs

  build-depends:       base >= 4.8,
                       pretty >=1.1

  hs-source-dirs:      src
  default-language:    Haskell2010
